[FIX] web, website: ensure that portal content is always readable
Commit [1] changed the card style of Bootstrap cards. Only coloring
the header and footer while the body always has a white background.
With website installed, this can cause issue for users who choose to
have a dark background on their website.

Steps to reproduce:
- Install website and Sales
- Change the background of a website to a dark color
- Go to the portal and choose a sales order
- The content in the table is white and therefore not readable

Since we set the color of cards white, content inside of them should
have a dark color. However if the website has a text color that is light
the content of a table will reflect that color. Therefore, making sure
that the table has a specific color and is always readable is needed.

[1]: https://github.com/odoo/odoo/commit/ddf2d2dd666c6e3fa2b6b7f943575657a42d6d8b

task-2728923

--- a/addons/web/static/src/scss/bootstrap_review.scss
+++ b/addons/web/static/src/scss/bootstrap_review.scss
@@ -39,6 +39,23 @@
         // TODO remove me in master.
         background-color: transparent !important;
     }
+    // On a website that has a bright text color, but bright card backgrounds,
+    // tables will have unreadable text colors. Forcing inherit ensure that
+    // the table color will be the same as the card bg-color.
+    table {
+        color: inherit;
+    }
+}
+// card-bg, which impacts the entire card, is set to white by default
+// but its color remains unaffected. This means that card-header and card-footer
+// do not have a color set.
+// In case the website has a main text color bright, but does not change
+// the card bg color, the text color on a footer and header will be bright even
+// tho the default card bg is white. This insure that the default text-color
+// is the opposite for all the card, including the footer and header.
+$card-color: color-yiq($card-bg) !default;
+.card {
+    color: $card-color;
 }
 .accordion {
     .collapsing, .collapse.show {
